--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <header class="header">
       <div class="header-logo">
-        <a href="/"><h2 class="uppercase home">kongsvinger-it</h2></a>
+        <a href="/"
+          ><img src="/img/logo.jpg" alt="logo of kongsvinger-it brand"
+        /></a>
       </div>
       <nav id="main-nav" class="main-nav">
         <button id="menu-toggle" class="menu-toggle" title="hamburger-menu">
@@ -44,13 +46,13 @@
       </div> -->
     </header>
     <main class="flex-column justified-center align-items-center">
-      <div class="card" id="one">
+      <div class="page" id="one">
         <!--   <h1 class="uppercase bold text-align-center">about me</h1> -->
 
         <div class="flex justified-center align-items-center about-me">
           <div class="profile-img-container">
             <img
-              src="/img/background3.jpg"
+              src="/img/AI_profile.jpg"
               alt="profile picture of me"
               class="profile-img"
             />
@@ -95,7 +97,7 @@
         </div>
       </div>
       <div
-        class="card flex justified-center align-items-center flex-wrap"
+        class="page flex justified-center align-items-center flex-wrap"
         id="two"
       >
         <div class="flip-card">
@@ -144,7 +146,7 @@
         </div>
       </div>
       <div
-        class="card flex justified-center align-items-center flex-wrap"
+        class="page flex justified-center align-items-center flex-wrap"
         id="three"
       >
         <div class="flip-card">
@@ -166,8 +168,11 @@
             <div class="flip-card-text-container flex-column">
               <h2 class="capitalize bold">semester project 1</h2>
               <p>
-                In my semester project 1 the users are teachers, studends,
-                parents and child from age 7 - 15 years old.
+                The goal of this project was: Based on the first-semester
+                curriculum, the semester project should reflect the student’s
+                creative and technical knowledge and skills. This includes
+                design principles, project management, communication technology,
+                and development with HTML/CSS.
               </p>
               <div class="flip-card__back-wrapper">
                 <div>
@@ -190,7 +195,7 @@
         </div>
       </div>
       <div
-        class="card flex justified-center align-items-center flex-wrap"
+        class="page flex justified-center align-items-center flex-wrap"
         id="four"
       >
         <div class="flip-card">
@@ -210,15 +215,15 @@
             <div class="flip-card-text-container flex-column">
               <h2 class="capitalize bold">cross-course project</h2>
               <p>
-                In my exam my goal was to create a website that could work for
-                my local handball team. The users are coaches, parents and
-                athletes related to the club, and the website works as a
-                information channel and exposure of the club.
+                The goal of this project was to use WordPress as an content
+                management to setup an API for consumption for my cross-course
+                project. My cross-course project is a project of learning HTML,
+                CSS and Vanilla JavaScript.
               </p>
               <div class="flip-card__back-wrapper">
                 <div>
                   <i class="fa-brands fa-github"></i>
-                  <a href="https://github.com/jonhavbra87/gamehub/tree/wpAPI"
+                  <a href="https://github.com/jonhavbra87/cross-course-project"
                     >GitHUB</a
                   >
                 </div>
@@ -236,7 +241,7 @@
         </div>
       </div>
       <div
-        class="card flex-column justified-center align-items-center"
+        class="page flex-column justified-center align-items-center"
         id="five"
       >
         <h1 class="uppercase bold">contact me</h1>
