--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="flex justified-center align-items-center about-me">
           <div class="profile-img-container">
             <img
-              src="/img/AI_profile.jpg"
+              src="/img/profil.jpg"
               alt="profile picture of me"
               class="profile-img"
             />
