--- a/index.html
+++ b/index.html
@@ -311,7 +311,24 @@
             <i class="fa-solid fa-globe"></i>
           </a>
         </div>
+        <div>
+          <a
+            href="https://www.linkedin.com/in/jon-are-haver%C3%A5en-bratt%C3%A5s-5a3805262/?trk=people-guest_people_search-card&originalSubdomain=no"
+            aria-label="connect with me on linkedin"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
+        <div>
+          <a
+            href="https://www.instagram.com/jonareb87/?igsh=MTAwdDEzZHFwMWFjbQ%3D%3D&utm_source=qr"
+            aria-label="connect with me on Instagram"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
       </div>
+      <!-- <p>Jon Are Haveråen-Brattås</p> -->
     </footer>
     <button id="backToTop" title="back to top">
       <i class="fa-solid fa-circle-arrow-up back-to-top"></i>
