--- a/index.html
+++ b/index.html
@@ -349,42 +349,47 @@
         </div> -->
       </div>
     </main>
-    <footer class="footer">
-      <div class="footer-content">
-        <div>
-          <a
-            href="https://github.com/jonhavbra87/"
-            aria-label="Read more about my github page"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </div>
-        <div>
-          <a
-            href="https://kongsvinger-it.no"
-            aria-label="Read more about my homepage"
-          >
-            <i class="fa-solid fa-globe"></i>
-          </a>
-        </div>
-        <div>
-          <a
-            href="https://www.linkedin.com/in/jon-are-haver%C3%A5en-bratt%C3%A5s-5a3805262/?trk=people-guest_people_search-card&originalSubdomain=no"
-            aria-label="connect with me on linkedin"
-          >
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-        </div>
-        <div>
-          <a
-            href="https://www.instagram.com/jonareb87/?igsh=MTAwdDEzZHFwMWFjbQ%3D%3D&utm_source=qr"
-            aria-label="connect with me on Instagram"
-          >
-            <i class="fa-brands fa-instagram"></i>
-          </a>
+    <footer class="footer gap">
+      <div>
+        <h2 class="small-caps">follow me:</h2>
+        <div class="footer-content">
+          <div>
+            <a
+              href="https://github.com/jonhavbra87/"
+              aria-label="Read more about my github page"
+            >
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </div>
+          <div>
+            <a
+              href="https://kongsvinger-it.no"
+              aria-label="Read more about my homepage"
+            >
+              <i class="fa-solid fa-globe"></i>
+            </a>
+          </div>
+          <div>
+            <a
+              href="https://www.linkedin.com/in/jon-are-haver%C3%A5en-bratt%C3%A5s-5a3805262/?trk=people-guest_people_search-card&originalSubdomain=no"
+              aria-label="connect with me on linkedin"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </div>
+          <div>
+            <a
+              href="https://www.instagram.com/jonareb87/?igsh=MTAwdDEzZHFwMWFjbQ%3D%3D&utm_source=qr"
+              aria-label="connect with me on Instagram"
+            >
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </div>
         </div>
       </div>
-      <!-- <p>Jon Are Haveråen-Brattås</p> -->
+      <p class="italic small">
+        <i class="fa-regular fa-copyright small"></i>Jon Are Haveråen-Brattås
+      </p>
     </footer>
     <button id="backToTop" title="back to top">
       <i class="fa-solid fa-circle-arrow-up back-to-top"></i>
