--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="header-logo">
         <a href="/"
-          ><img src="/img/logo.jpg" alt="logo of kongsvinger-it brand"
+          ><img src="/img/logo2.svg" alt="logo of kongsvinger-it brand"
         /></a>
       </div>
       <nav id="main-nav" class="main-nav">
@@ -245,7 +245,7 @@
         id="five"
       >
         <h1 class="uppercase bold margin-top">contact me</h1>
-        <div class="form-container">
+        <!-- <div class="form-container">
           <form
             method="POST"
             action="https://www.domeneshop.no/cgi-bin/mailto.cgi"
@@ -300,14 +300,9 @@
               title="send in form"
             />
           </form>
-        </div>
-        <!-- <div class="form-container">
-          <form
-            method="GET"
-            action="/contactSuccess/index.html"
-            class=""
-            id="contactForm"
-          >
+        </div> -->
+        <div class="form-container">
+          <form method="GET" action="/receipt/" class="" id="contactForm">
             <div>
               <label>
                 Name (required)
@@ -346,12 +341,12 @@
               title="send in form"
             />
           </form>
-        </div> -->
+        </div>
       </div>
     </main>
     <footer class="footer gap">
       <div>
-        <h2 class="small-caps">follow me:</h2>
+        <h2 class="small-caps margin-bottom">follow me @</h2>
         <div class="footer-content">
           <div>
             <a
