updated card button

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="flip-card__front-side flex justified-evenly card-img-pe1">
             <h1 class="uppercase h1-background bold">project exam 1</h1>
             <button class="card-button" title="open project exam 1">
-              <i class="fa-solid fa-plus"></i>
+              <i class="fa-solid fa-info"></i>
             </button>
           </div>
 
@@ -138,7 +138,7 @@
                   >
                 </div>
                 <button class="card-button" title="close project exam 1">
-                  <i class="fa-solid fa-minus"></i>
+                  <i class="fa-solid fa-xmark"></i>
                 </button>
               </div>
             </div>
@@ -155,7 +155,7 @@
           >
             <h1 class="uppercase h1-background bold">semester project 1</h1>
             <button class="card-button" title="open semester project 1">
-              <i class="fa-solid fa-plus"></i>
+              <i class="fa-solid fa-info"></i>
             </button>
           </div>
 
@@ -188,7 +188,7 @@
                 </div>
               </div>
               <button class="card-button" title="close semester project 1">
-                <i class="fa-solid fa-minus"></i>
+                <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
           </div>
@@ -202,7 +202,7 @@
           <div class="flip-card__front-side flex justified-center card-img-ccp">
             <h1 class="uppercase h1-background bold">cross-course project</h1>
             <button class="card-button" title="open cross-course project">
-              <i class="fa-solid fa-plus"></i>
+              <i class="fa-solid fa-info"></i>
             </button>
           </div>
 
@@ -233,7 +233,7 @@
                 </div>
 
                 <button class="card-button" title="close cross-course project">
-                  <i class="fa-solid fa-minus"></i>
+                  <i class="fa-solid fa-xmark"></i>
                 </button>
               </div>
             </div>
