added some project & refactored card btn hover effect

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <a href="#four"><h1>cross-course</h1></a>
           </li>
           <li>
-            <a href="#five"><h1>contact</h1></a>
+            <a href="#five"><h1>soMe</h1></a>
+          </li>
+          <li>
+            <a href="#six"><h1>contact</h1></a>
           </li>
         </ul>
       </nav>
@@ -241,8 +244,60 @@
         </div>
       </div>
       <div
-        class="page flex-column justified-center align-items-center"
+        class="page flex justified-center align-items-center flex-wrap"
         id="five"
+      >
+        <div class="flip-card">
+          <div
+            class="flip-card__front-side flex justified-center card-img-some"
+          >
+            <h1 class="uppercase h1-background bold">social media website</h1>
+            <button class="card-button" title="open social media project">
+              <i class="fa-solid fa-info"></i>
+            </button>
+          </div>
+
+          <div class="flip-card__back-side flex">
+            <img
+              class="flip-card__back-img"
+              src="/img/socialmediaphone.png"
+              alt="picture of social media project website on mobile"
+            />
+            <div class="flip-card-text-container flex-column">
+              <h2 class="capitalize bold">social media website</h2>
+              <p>
+                In this project I have created a social media website where
+                users can create an account, login, post messages and images,
+                like and comment on posts. The website is created with HTML,
+                CSS, JavaScript and fetching data from an API. You can login
+                with the following credentials: testuser1337@noroff.no & user
+                Password: Testuser1337
+              </p>
+              <div class="flip-card__back-wrapper">
+                <div>
+                  <i class="fa-brands fa-github"></i>
+                  <a
+                    href="https://github.com/jonhavbra87/css-frameworks-ca/tree/js2"
+                    >GitHUB</a
+                  >
+                </div>
+                <div>
+                  <i class="fa-solid fa-globe"></i>
+                  <a href="https://js2-jahb.netlify.app/">Website</a>
+                </div>
+
+                <button class="card-button" title="close cross-course project">
+                  <i class="fa-solid fa-xmark"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="page flex-column justified-center align-items-center"
+        id="six"
       >
         <h1 class="uppercase bold margin-top">contact me</h1>
         <!-- <div class="form-container">
