chore: Update back-to-top button styling and behavior

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         <i class="fa-regular fa-copyright small"></i>Jon Are Haveråen-Brattås
       </p>
     </footer>
-    <button id="backToTop" title="back to top">
+    <button id="backToTop" title="back to top button">
       <i class="fa-solid fa-circle-arrow-up back-to-top"></i>
     </button>
   </body>
