Update login credentials in index.html

--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
                 users can create an account, login, post messages and images,
                 like and comment on posts. The website is created with HTML,
                 CSS, JavaScript and fetching data from an API. You can login
-                with the following credentials: testuser1337@noroff.no & user
-                Password: Testuser1337
+                with the following credentials: polorise1337@noroff.no & user
+                Password: Polorise1337
               </p>
               <div class="flip-card__back-wrapper">
                 <div>
